--- a/src/components/dashboard/Filters/Filters.module.css
+++ b/src/components/dashboard/Filters/Filters.module.css
@@ -26,3 +26,10 @@
   fill: transparent;
   stroke: var(--mainTextColor);
 }
+
+.filterIndicator{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
