--- a/src/components/Forms/CardForm/AddCard.module.css
+++ b/src/components/Forms/CardForm/AddCard.module.css
@@ -17,6 +17,8 @@
 }
 
 .formInputTitle {
+  font-family: 'Poppins';
+  outline: none;
   width: 300px;
   height: 49px;
   background-color: var(--inputsBgColor);
@@ -33,6 +35,9 @@
 }
 
 .formInput {
+  font-family: 'Poppins';
+  outline: none;
+  resize: none;
   width: 300px;
   height: 154px;
   background-color: var(--inputsBgColor);
