--- a/src/components/Forms/Help/NeedHelpForm.module.css
+++ b/src/components/Forms/Help/NeedHelpForm.module.css
@@ -33,6 +33,8 @@
 .formInput {
   width: 287px;
   height: 49px;
+  font-family: 'Poppins';
+  outline: none;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
   border-radius: 8px;
@@ -65,6 +67,8 @@
 .commentInput {
   width: 287px;
   height: 120px;
+  font-family: 'Poppins';
+  outline: none;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
   border-radius: 8px;
