--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -74,10 +74,10 @@
     margin-bottom: 4px;
 }
 .cardPriorityInfo{
-display: flex;
-gap: 4px;
-margin-right: 14px;
-}
+    display: flex;
+    gap: 4px;
+    margin-right: 14px;
+    }
 
 
 .cardPriorityCircle{
@@ -108,6 +108,7 @@ margin-right: 14px;
     fill: transparent;
 }
 .cardIconButton{
+    position: relative;
     background-color: inherit;
     width: 16px;
     height: 15px;
@@ -128,4 +129,57 @@ margin-right: 14px;
     fill: transparent;
     
 }
+
+
+.popupMenuList{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: absolute;
+    background-color: antiquewhite;
+    width: 135px;
+    padding: 15px;
+    z-index: 20;
+    margin-top: 15px;
+
+    background-color: var(--modalBgColor);
+    border-radius: 8px;
+    border: 0.1px solid var(--inputsBorderColor);
+    transition: 200ms linear;
+}
+
+.popupHidden{
+    padding: 0 15px;
+    opacity: 0;
+}
+
+.popupMenuItem{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+    color: var(--secondaryTextColor);
+    cursor: pointer;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    text-align: left;
+    stroke: var(--secondaryTextColor);
+
+}
+
+.popupMenuItem:hover{
+    color: var(--accentColor);
+    stroke: var(--accentColor);
+}
+
+.selectCardSvg{
+    width: 16px;
+    height: 16px;
+    stroke: inherit;
+    fill: transparent;
+}
+
 
