--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -14,7 +14,6 @@
   color: var(--mainTextColor);
 
   padding: 10px;
-  
 
   display: flex;
   gap: 8px;
@@ -26,12 +25,11 @@
   cursor: pointer;
 }
 
-.buttonOpen:hover{
+.buttonOpen:hover {
   background-color: var(--lightBgColor);
 }
 
-
-.userAvatarWrap{
+.userAvatarWrap {
   width: 32px;
   height: 32px;
 
@@ -48,4 +46,15 @@
   height: 25px;
   stroke: var(--darkBgColor);
   fill: var(--darkBgColor);
+}
+
+.userAvatar {
+  width: 32px;
+  height: 32px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 8px;
 }
