--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -268,8 +268,8 @@ svg {
 .errorMessage {
   width: 100%;
   height: 16px;
-  background-color: rgba(142, 139, 139, 0.5);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  /* background-color: rgba(142, 139, 139, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3); */
   border-radius: 6px;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -280,27 +280,8 @@ svg {
   font-size: 10px;
   line-height: 14px;
   position: absolute;
-  bottom: -14px;
+  bottom: -15px;
   right: 0;
   padding: 1px 8px 1px;
   animation: slideIn 0.3s ease forwards;
 }
-
-/* .errorMessage {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: left;
-  height: 10px;
-  margin: 2px;
-  font-size: 12px;
-  color: #555655;
-  padding-left: 12px;
-  font-size: 12px;
-  font-weight: 400;
-} */
-
-/* 
-
-// * підключити зміну теми  
- */
