--- a/src/components/Warning/Warning.module.css
+++ b/src/components/Warning/Warning.module.css
@@ -1,3 +1,63 @@
 .WDWrapper{
-    color:azure
+width: 350px;
+  background-color: var(--modalBgColor);
+  border-radius: 8px;
+  border: 0.1px solid var(--inputsBorderColor);
+  padding: 30px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.WDText{
+font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: var(--mainTextColor);
+  text-align: center;
+
+  margin-bottom: 25px;
+}
+
+.WDTitle{
+    color: var(--accentColor);
+}
+
+.WList{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.WItem{
+    width: 50%;
+}
+
+.WButton{
+display: flex;
+width: 100%;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accentColor);
+  border-radius: 8px;
+  padding: 10px 20px;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+
+  color: var(--reversedTextColor);
+  cursor: pointer;
+}
+
+.WButton:hover {
+    background-color: var(--accentColorHover);
+  }
