--- a/src/components/Forms/UserForm/UserForm.module.css
+++ b/src/components/Forms/UserForm/UserForm.module.css
@@ -220,6 +220,25 @@
 }
 
 .errorMessage {
+  width: 100%;
+  height: 16px;
+  border-radius: 6px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  display: inline;
+  color: var(--mainTextColor);
+  float: left;
+  font-weight: 100;
+  font-size: 10px;
+  line-height: 14px;
+  position: absolute;
+  bottom: -15px;
+  right: 0;
+  padding: 1px 8px 1px;
+  animation: slideIn 0.3s ease forwards;
+}
+
+/* .errorMessage {
   display: flex;
   width: 100%;
   align-items: center;
@@ -230,7 +249,7 @@
   padding-left: 12px;
   font-size: 12px;
   font-weight: 400;
-}
+} */
 
 .userIconBtn {
   display: flex;
