--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,7 @@
   --scrollThumbColor: #121212;
   --helpBgColor: #1f1f1f;
   --boardAddIconBg: #bedbb0;
+  --bordBgColor: rgb(31, 31, 31);
 
   --sidebarLightColor: #888888;
   --sidebarLightColorEl: #2a2a2a;
@@ -66,6 +67,7 @@
   --sidebarBgColor: #ffffff;
   --scrollThumbColor: #d3d3d3;
   --helpBgColor: #f6f6f7;
+  --bordBgColor: rgb(246, 246, 246);
 
   /* кольори для тексту */
   --mainTextColor: #161616;
@@ -97,7 +99,7 @@
 
 [data-theme='violet'] {
   /* основні бекграунди (лайт це той що під дошкою) */
-  --lightBgColor: rgba(255, 255, 255, 0.2);
+  --lightBgColor: rgba(229, 229, 229, 1);
   --secondaryBgColor: #ffffff;
   --darkBgColor: #ffffff;
   --greyBgElements: rgb(232, 232, 232);
@@ -106,11 +108,12 @@
   --logoIconColor: #5255bc;
   --helpBgColor: #9192d6;
   --boardAddIconBg: #b8bcfd;
+  --bordBgColor: rgba(255, 255, 255, 0.2);
 
   --sidebarLightColor: #a9aade;
   --sidebarLightColorEl: #6366c3;
 
-  /* кольори для тексту */
+  /* кольори для тексту  */
   --sidebarMainTextColor: #ffffff;
   --mainTextColor: #161616;
   --secondaryTextColor: #5c5c5c;
