--- a/src/components/Forms/CardForm/AddCard.module.css
+++ b/src/components/Forms/CardForm/AddCard.module.css
@@ -1,11 +1,3 @@
-.formWrap {
-  width: 350px;
-  height: 552px;
-  background-color: var(--modalBgColor);
-  border-radius: 8px;
-  border: 0.1px solid var(--inputsBorderColor);
-  padding: 30px 24px;
-}
 
 .formTitle {
   font-size: 18px;
@@ -19,7 +11,7 @@
 .formInputTitle {
   font-family: 'Poppins';
   outline: none;
-  width: 300px;
+  width: 100%;
   height: 49px;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
@@ -38,7 +30,7 @@
   font-family: 'Poppins';
   outline: none;
   resize: none;
-  width: 300px;
+  width: 100%;
   height: 154px;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
