--- a/src/components/Forms/Column/ColumnForm.module.css
+++ b/src/components/Forms/Column/ColumnForm.module.css
@@ -1,25 +1,5 @@
 
 
-.formWrap {
-  width: 335px;
-  height: 230px;
-  background-color: var(--modalBgColor);
-  border-radius: 8px;
-  border: 0.1px solid var(--inputsBorderColor);
-  padding: 30px 24px;
-}
-
-@media screen and (min-width: 768px) {
-  .formWrap {
-    width: 350px;
-    height: 230px;
-    background-color: var(--modalBgColor);
-    border-radius: 8px;
-    border: 0.1px solid var(--inputsBorderColor);
-    padding: 30px 24px;
-  }
-}
-
 .formTitle {
   font-size: 18px;
   font-weight: 500;
@@ -31,7 +11,7 @@
 }
 
 .formInput {
-  width: 287px;
+  width: 100%;
   height: 49px;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
