--- a/src/components/Forms/Help/NeedHelpForm.module.css
+++ b/src/components/Forms/Help/NeedHelpForm.module.css
@@ -1,24 +1,4 @@
 
-.formWrap {
-  width: 335px;
-  height: 355px;
-  background-color: var(--modalBgColor);
-  border-radius: 8px;
-  border: 0.1px solid var(--inputsBorderColor);
-  padding: 24px 24px;
-}
-
-@media screen and (min-width: 768px) {
-  .formWrap {
-    width: 400px;
-    height: 355px;
-    background-color: var(--modalBgColor);
-    border-radius: 8px;
-    border: 0.1px solid var(--inputsBorderColor);
-    padding: 24px 24px;
-  }
-}
-
 .formTitle {
   font-size: 18px;
   font-weight: 500;
@@ -31,7 +11,7 @@
 }
 
 .formInput {
-  width: 287px;
+  width: 100%;
   height: 49px;
   font-family: 'Poppins';
   outline: none;
@@ -49,7 +29,7 @@
 
 @media screen and (min-width: 768px) {
   .formInput {
-    width: 352px;
+    width: 100%;
     height: 49px;
     background-color: var(--inputsBgColor);
     border: 1px solid var(--inputsBorderColor);
@@ -65,7 +45,7 @@
 }
 
 .commentInput {
-  width: 287px;
+  width: 100%;
   height: 120px;
   font-family: 'Poppins';
   outline: none;
@@ -85,7 +65,7 @@
 
 @media screen and (min-width: 768px) {
   .commentInput {
-    width: 352px;
+    width: 100%;
     height: 120px;
     background-color: var(--inputsBgColor);
     border: 1px solid var(--inputsBorderColor);
