--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,6 +1,8 @@
-.react-datepicker {
+:global .react-datepicker {
   border: 1px solid var();
   border-radius: 8px;
+  background-color: var(--calendarBgColor);
+  margin-left: 100px;
 }
 
 .react-datepicker__input-container input {
@@ -11,12 +13,13 @@
   background-color: var();
   border: none;
 }
-.react-datepicker__month-container {
-  width: 233px;
-  min-height: 254px;
-  padding: 18px;
+:global .react-datepicker__month-container {
+  /* width: 233px;
+  min-height: 254px; */
+  padding-left: 18px;
+  padding-right: 18px;
 }
-.react-datepicker__header {
+:global .react-datepicker__header {
   padding-bottom: 0;
   padding-top: 0;
 
@@ -46,6 +49,7 @@
   font-size: 14px;
   letter-spacing: -0.02em;
   color: var();
+  
 }
 
 .react-datepicker__day-name,
@@ -85,8 +89,9 @@
   background-color: var();
   color: var();
 }
-.react-datepicker__day--disabled {
-  color: var();
+:global .react-datepicker__day--disabled {
+  /* color: var(); */
+  color: var(--inputsBorderColor);
 }
 
 .react-datepicker__day-name,
@@ -108,7 +113,7 @@
   color: var();
   transition: background-color var();
 }
-.react-datepicker__week {
+:global .react-datepicker__week {
   display: flex;
   gap: 1px;
 }
@@ -119,10 +124,18 @@
   visibility: visible;
 }
 
+:global .react-datepicker__day-names {
+  
+  background-color: var(--calendarBgColor);
+  border-top: 1px solid #FFFFFF33;
+  
+  
+}
+
 .calendar {
   background-color: var(--calendarBgColor);
   border-color: var(--inputsBorderColor);
-  color: aquamarine;
+  color: var(--mainTextColor);
 }
 
 .day {
@@ -138,7 +151,7 @@
 }
 
 .header {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   height: 100%;
@@ -188,6 +201,24 @@
 }
 
 .weekDay {
-  color: #ffffff80;
-  background-color: var(--calendarBgColor);
+    background-color: var(--calendarBgColor);
+  color: var(--mainTextColor);
+}
+
+
+.iconChevronDown {
+  margin-left: 4px;  
+  stroke: var(--boardAddIconBg);  
+}
+
+.buttonWithIcon {
+  display: flex;
+  align-items: center; 
+}
+
+
+.disabled {
+  pointer-events: none; 
+  color: #FFFFFF33;
+  
 }
