--- a/src/components/Sidebar/Board/Board.module.css
+++ b/src/components/Sidebar/Board/Board.module.css
@@ -1,6 +1,5 @@
 .boardItem {
   display: flex;
-  gap: 80px;
   justify-content: space-between;
   width: 100%;
   height: 61px;
@@ -90,7 +89,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-
+  word-wrap: break-word;
   line-height: normal;
   letter-spacing: -0.28px;
   margin-left: 4px;
@@ -114,6 +113,7 @@
 .boardButtonBox {
   display: flex;
   gap: 8px;
+  margin-left: auto;
 }
 
 .boardButton {
