--- a/src/components/Forms/BoardForm/BoardForm.module.css
+++ b/src/components/Forms/BoardForm/BoardForm.module.css
@@ -1,4 +1,3 @@
-
 .formTitle {
   font-size: 18px;
   font-weight: 500;
@@ -6,7 +5,6 @@
   letter-spacing: -0.02em;
   text-align: left;
   color: var(--mainTextColor);
-
   margin-bottom: 25px;
 }
 
@@ -17,14 +15,19 @@
   border: 1px solid var(--inputsBorderColor);
   border-radius: 8px;
   padding: 0 17px;
-
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
   letter-spacing: -0.02em;
   text-align: left;
-
   color: var(--mainTextColor);
+  opacity: 0.4; 
+}
+
+.formInput:hover,
+.formInput:active,
+.formInput:focus {
+  opacity: 1; 
 }
 
 .formInput::placeholder {
@@ -108,7 +111,6 @@
   margin-left: 0;
 }
 
-/* Hide the browser's default radio button */
 .container input {
   position: absolute;
   opacity: 0;
@@ -125,7 +127,6 @@
   width: 28px;
 }
 
-/* Create a custom radio button */
 .checkmark {
   position: absolute;
   top: 0;
@@ -146,7 +147,6 @@
   stroke: var(--secondaryTextColor);
 }
 
-/* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
   stroke: var(--mainTextColor);
 }
@@ -156,7 +156,6 @@
   border-radius: 8px;
 }
 
-/* When the radio button is checked, add a blue background */
 .container input:checked ~ .checkmark {
   background-color: inherit;
   fill: var(--modalBgColor);
@@ -180,7 +179,6 @@
   background-color: var(--accentColor);
   height: 49px;
   border-radius: 8px;
-
   font-size: 16px;
   font-weight: 500;
   line-height: 21px;
