--- a/src/components/Forms/CardForm/AddCard.module.css
+++ b/src/components/Forms/CardForm/AddCard.module.css
@@ -1,4 +1,3 @@
-
 .formTitle {
   font-size: 18px;
   font-weight: 500;
@@ -24,6 +23,13 @@
   letter-spacing: -0.02em;
   text-align: left;
   color: var(--mainTextColor);
+  opacity: 0.4;
+}
+
+.formInputTitle:hover,
+.formInputTitle:active,
+.formInputTitle:focus {
+  opacity: 1; 
 }
 
 .formInput {
@@ -44,6 +50,13 @@
   letter-spacing: -0.02em;
   text-align: left;
   color: var(--mainTextColor);
+  opacity: 0.4;
+}
+
+.formInput:hover,
+.formInput:active,
+.formInput:focus {
+  opacity: 1; 
 }
 
 .formInput::placeholder {
@@ -66,11 +79,6 @@
   letter-spacing: -0.02em;
   color: var(--mainTextColor);
   margin-bottom: 4px;
-}
-
-.formInputcal {
-  background-color: yellow;
-  /* Інші стилі, які вам потрібні */
 }
 
 .Span {
@@ -141,8 +149,9 @@
 
 .checkmark {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 14px;
   width: 14px;
   border-radius: 50%;
@@ -158,7 +167,7 @@
 .deadlineContainer {
   display: flex;
   align-items: center;
-  color: #bedbb0;
+  color: var(--boardAddIconBg);
 }
 
 .span {
