--- a/src/components/Forms/Help/NeedHelpForm.module.css
+++ b/src/components/Forms/Help/NeedHelpForm.module.css
@@ -1,4 +1,3 @@
-
 .formTitle {
   font-size: 18px;
   font-weight: 500;
@@ -6,7 +5,6 @@
   letter-spacing: -0.02em;
   text-align: left;
   color: var(--mainTextColor);
-
   margin-bottom: 25px;
 }
 
@@ -25,6 +23,13 @@
   letter-spacing: -0.02em;
   text-align: left;
   color: var(--mainTextColor);
+  opacity: 0.4;
+}
+
+.formInput:hover,
+.formInput:active,
+.formInput:focus {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -41,6 +46,15 @@
     letter-spacing: -0.02em;
     text-align: left;
     color: var(--mainTextColor);
+    opacity: 0.4;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .formInput:hover,
+  .formInput:active,
+  .formInput:focus {
+    opacity: 1;
   }
 }
 
@@ -61,6 +75,13 @@
   color: var(--mainTextColor);
   margin-top: 14px;
   resize: none;
+  opacity: 0.4;
+}
+
+.commentInput:hover,
+.commentInput:active,
+.commentInput:focus {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -79,6 +100,15 @@
     color: var(--mainTextColor);
     margin-top: 14px;
     resize: none;
+    opacity: 0.4;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .commentInput:hover,
+  .commentInput:active,
+  .commentInput:focus {
+    opacity: 1;
   }
 }
 
@@ -156,7 +186,6 @@
   margin-left: 0;
 }
 
-/* Hide the browser's default radio button */
 .container input {
   position: absolute;
   opacity: 0;
@@ -173,7 +202,6 @@
   width: 28px;
 }
 
-/* Create a custom radio button */
 .checkmark {
   position: absolute;
   top: 0;
@@ -194,7 +222,6 @@
   stroke: var(--secondaryTextColor);
 }
 
-/* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
   stroke: var(--mainTextColor);
 }
@@ -204,7 +231,6 @@
   border-radius: 8px;
 }
 
-/* When the radio button is checked, add a blue background */
 .container input:checked ~ .checkmark {
   background-color: inherit;
   fill: var(--modalBgColor);
@@ -228,12 +254,10 @@
   background-color: var(--accentColor);
   height: 49px;
   border-radius: 8px;
-
   font-size: 16px;
   font-weight: 500;
   line-height: 21px;
   letter-spacing: -0.02em;
-
   color: var(--reversedTextColor);
   cursor: pointer;
 }
