--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -88,7 +88,7 @@
   color: white;
 }
 
-Form {
+.Form {
   display: flex;
   flex-direction: column;
   padding: 0;
@@ -243,7 +243,7 @@ Form {
   border-color: rgba(190, 219, 176, 1);
 }
 
-svg {
+.svg {
   width: 18px;
   height: 18px;
   margin-right: 5px;
@@ -285,4 +285,18 @@ svg {
   right: 0;
   padding: 1px 8px 1px;
   animation: slideIn 0.3s ease forwards;
+}
+
+.loaderBackdrop{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #9dc888;
+  opacity: 0.6;
+  z-index: 10;
 }
