--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -69,7 +69,7 @@
   gap: 8px;
   border-radius: 8px;
   color: var(--reversedTextColor);
-  background-color: var(--boardAddIconBg);
+  background-color: var(--accentColor);
   transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 14px 0;
 
