--- a/src/components/dashboard/Filters/Filters.module.css
+++ b/src/components/dashboard/Filters/Filters.module.css
@@ -4,6 +4,14 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding: 8px;
+  background-color: var(--accentColor);
+  border-radius: 8px;
+}
+
+.menuFilterTheme:hover,
+.menuFilterTheme:active{
+  background-color: var(--accentColorHover);
 }
 
 .filterButton {
@@ -12,7 +20,7 @@
   height: 20px;
   gap: 8px;
   background-color: transparent;
-  color: var(--mainTextColor);
+  color: var(--darkBgColor);
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
@@ -23,7 +31,7 @@
   width: 16px;
   height: 16px;
   fill: transparent;
-  stroke: var(--mainTextColor);
+  stroke: var(--darkBgColor);
 }
 
 .filterIndicator{
