--- a/src/components/dashboard/MainDashboard/MainDashboard.module.css
+++ b/src/components/dashboard/MainDashboard/MainDashboard.module.css
@@ -25,7 +25,7 @@
   border-radius: 12px;
   width: 12px;
   border: none;
-  background-color: #404040;
+  background-color: var(--scrollThumbColor);
 }
 
 .columnsList {
